--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,35 +1,49 @@
-﻿<ui:FluentWindow 
-        x:Class="PrometheusActivator.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PrometheusActivator"
+﻿<ui:FluentWindow
+    x:Class="PrometheusActivator.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:PrometheusActivator"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:pages="clr-namespace:PrometheusActivator.Pages"
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-        Title="Prometheus Activator" Height="450" Width="800"
-        ExtendsContentIntoTitleBar="True"
-        ResizeMode="CanResize"
-        WindowStartupLocation="CenterScreen"
-        WindowBackdropType="Mica"
-        ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
-        ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-        Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-        mc:Ignorable="d">
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    Title="Prometheus Activator"
+    Width="800"
+    Height="450"
+    ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
+    ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+    ExtendsContentIntoTitleBar="True"
+    Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+    ResizeMode="CanResize"
+    WindowBackdropType="Mica"
+    WindowStartupLocation="CenterScreen"
+    mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <ui:TitleBar Title="Prometheus Activator"  Icon="{ui:SymbolIcon Symbol=Home24}" Grid.Row="0"/>
+        <ui:TitleBar
+            Title="Prometheus Activator"
+            Grid.Row="0"
+            Icon="{ui:SymbolIcon Symbol=Home24}" />
 
-        <ui:NavigationView x:Name="RootNavigation" IsBackButtonVisible="Collapsed" Grid.Row="1">
+        <ui:NavigationView
+            x:Name="RootNavigation"
+            Grid.Row="1"
+            IsBackButtonVisible="Collapsed">
             <ui:NavigationView.MenuItems>
                 <ui:NavigationViewItem Content="Home" Icon="{ui:SymbolIcon Symbol=Home24}" />
-                <ui:NavigationViewItem Content="Windows" Icon="{ui:SymbolIcon Symbol=Home24}" TargetPageType="{x:Type pages:WindowsPage}"/>
+                <ui:NavigationViewItem
+                    Content="Windows"
+                    Icon="{ui:SymbolIcon Symbol=Home24}"
+                    TargetPageType="{x:Type pages:WindowsPage}" />
                 <ui:NavigationViewItem Content="Office" Icon="{ui:SymbolIcon Symbol=Home24}" />
-                <ui:NavigationViewItem Content="Adobe" Icon="{ui:SymbolIcon Symbol=Home24}" TargetPageType="{x:Type pages:AdobePage}"/>
+                <ui:NavigationViewItem
+                    Content="Adobe"
+                    Icon="{ui:SymbolIcon Symbol=Home24}"
+                    TargetPageType="{x:Type pages:AdobePage}" />
             </ui:NavigationView.MenuItems>
             <ui:NavigationView.FooterMenuItems>
                 <ui:NavigationViewItem Content="Settings" Icon="{ui:SymbolIcon Symbol=Settings24}" />
