--- a/Pages/WindowsPage.xaml
+++ b/Pages/WindowsPage.xaml
@@ -1,24 +1,171 @@
-﻿<Page x:Class="PrometheusActivator.Pages.WindowsPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:PrometheusActivator.Pages"
-          xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-         xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="WindowsPage"
-      ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
+﻿<Page
+    x:Class="PrometheusActivator.Pages.WindowsPage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:PrometheusActivator.Pages"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    Title="WindowsPage"
+    d:DesignWidth="800"
+    ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
     ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-    Foreground="{DynamicResource TextFillColorPrimaryBrush}">
-    <StackPanel>
-        <svgc:SvgViewbox  x:Name="Logo"  Height="100" Margin="0, 0, 20, 0" VerticalAlignment="Center"/>
+    Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+    mc:Ignorable="d">
+
+    <StackPanel Margin="50">
+        <svgc:SvgViewbox
+            x:Name="Logo"
+            Height="100"
+            VerticalAlignment="Center" />
+
+        <StackPanel Orientation="Vertical">
+            <TextBlock
+                Margin="4"
+                Style="{StaticResource SubtitleTextBlockStyle}"
+                Text="Product Activation" />
+            <ui:CardControl
+                MinHeight="70"
+                Margin="4,0,4,0"
+                Padding="20,10,20,10"
+                Icon="{ui:SymbolIcon Symbol=LockOpen24}">
+                <ui:CardControl.Header>
+                    <StackPanel>
+                        <ui:TextBlock
+                            Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+                            Text="Activation Method"
+                            TextWrapping="WrapWithOverflow" />
+
+                    </StackPanel>
+                </ui:CardControl.Header>
+                <ComboBox
+                    x:Name="MethodCombo"
+                    Width="310"
+                    VerticalAlignment="Center"
+                    SelectionChanged="MethodCombo_SelectionChanged"
+                    Text="Select your Activation Method">
+                    <ComboBoxItem Content="Traditional KMS (SLMGR)" />
+                    <ComboBoxItem Content="Online KMS" />
+                    <ComboBoxItem Content="Renew" />
+                    <ComboBoxItem Content="Rearm" />
+                </ComboBox>
+            </ui:CardControl>
+
+            <ui:CardControl
+                MinHeight="70"
+                Margin="4,0,4,0"
+                Padding="20,10,20,10"
+                Header="Product"
+                Icon="{ui:SymbolIcon Symbol=Laptop24}">
+                <ComboBox
+                    x:Name="ProductsCard"
+                    Width="310"
+                    VerticalAlignment="Center"
+                    SelectionChanged="MethodCombo_SelectionChanged">
+                    <ComboBoxItem Content="Traditional KMS (SLMGR)" />
+                    <ComboBoxItem Content="Online KMS" />
+                    <ComboBoxItem Content="Renew" />
+                    <ComboBoxItem Content="Rearm" />
+                </ComboBox>
+            </ui:CardControl>
+
+            <ui:CardControl
+                x:Name="LicensesCard"
+                MinHeight="70"
+                Margin="4,0,4,0"
+                Padding="20,10,20,10"
+                Icon="{ui:SymbolIcon Symbol=Key24}">
+
+                <ui:CardControl.Header>
+                    <StackPanel>
+                        <ui:TextBlock
+                            Margin="0"
+                            FontTypography="BodyStrong"
+                            Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+                            Text="Licenses"
+                            TextWrapping="WrapWithOverflow" />
+                        <ui:TextBlock
+                            Appearance="Secondary"
+                            Foreground="{DynamicResource TextFillColorSecondaryBrush}"
+                            Text="Select the license corresponding to your edition"
+                            TextWrapping="WrapWithOverflow" />
+                    </StackPanel>
+                </ui:CardControl.Header>
+                <ComboBox
+                    x:Name="LicenseCombo"
+                    Width="310"
+                    VerticalAlignment="Center"
+                    Text="Select your License Key" />
+            </ui:CardControl>
+
+            <ui:CardControl
+                x:Name="ServerCard"
+                MinHeight="70"
+                Margin="4,0,4,0"
+                Padding="20,10,20,10"
+                Icon="{ui:SymbolIcon Symbol=ServerMultiple20}">
+
+                <ui:CardControl.Header>
+                    <StackPanel>
+                        <ui:TextBlock
+                            Margin="0"
+                            FontTypography="BodyStrong"
+                            Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+                            Text="KMS Server"
+                            TextWrapping="WrapWithOverflow" />
+                        <ui:TextBlock
+                            Appearance="Secondary"
+                            Foreground="{DynamicResource TextFillColorSecondaryBrush}"
+                            Text="Choose one of the available servers. The recommended option is &quot;Auto&quot;"
+                            TextWrapping="WrapWithOverflow" />
+                    </StackPanel>
+                </ui:CardControl.Header>
+                <ComboBox
+                    x:Name="ServerCombo"
+                    Width="310"
+                    VerticalAlignment="Center"
+                    Text="Select your KMS Server" />
+            </ui:CardControl>
+
+        </StackPanel>
+
+        <StackPanel Margin="0, 20, 0, 0">
+            <TextBlock Margin="0,4" Style="{StaticResource BodyStrongTextBlockStyle}">Console</TextBlock>
+            <TextBox
+                x:Name="ShellBox"
+                Height="300"
+                AcceptsReturn="True"
+                FontFamily="Consolas"
+                IsReadOnly="True"
+                TextWrapping="Wrap" />
+            <Grid Margin="0,15, 0, 0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <ui:Button
+                    x:Name="ActivateButton"
+                    Grid.Column="0"
+                    HorizontalAlignment="Left"
+                    Appearance="Success"
+                    Content="Activate"
+                    IsEnabled="True" />
+                <ui:Button
+                    x:Name="InfoButton"
+                    Grid.Column="1"
+                    HorizontalAlignment="Center"
+                    Content="Information" />
+                <ui:Button
+                    x:Name="RemoveButton"
+                    Grid.Column="2"
+                    HorizontalAlignment="Right"
+                    Appearance="Danger"
+                    Content="Remove Key"
+                    IsEnabled="True" />
+            </Grid>
+        </StackPanel>
     </StackPanel>
-    
-
-
-
-
-
 </Page>
